--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="arejaKaste">
       <h1> Pieteikuma anketa HTML nodarbībām </h1>
-      <img src="atteli/Tepera strūklaka.jpg" alt="attēls">
+      <img src="Programmēšana/mezs.jfif" alt="attēls">
       <p> Ievadi informāciju par sevi:</p>
       <form>
         <label for="vards"> vārds:</label>
