--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="arejaKaste">
-      <h1> Pieteikuma anketa HTML nodarbībām </h1>
+      <h1 style="text-align:center;"> Pieteikuma anketa HTML nodarbībām </h1>
       <img src="atteli/mass.jpg" alt="attēls">
       <p> Ievadi informāciju par sevi:</p>
       <form>
