--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
+ <head>
    <title> Anketa </title>
-   <link rel='stylesheet' type='text/css' media='screen' herf='css/style.css'>
-  </head>
-  <body>
-    <div class="arejaKaste">
-      <h1 style="text-align:center;"> Pieteikuma anketa HTML nodarbībām </h1>
-      <img src="atteli/mass.jpg" alt="attēls">
-      <p> Ievadi informāciju par sevi:</p>
-      <form>
-        <label for="vards"> vārds:</label>
-        <input type="text" name="vards" >
-      </form>
-      <br>
-      <label for="vecums">vecums:</label>
-    	<select name="vecums" >
+  <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'> 
+ </head>
+ <body>
+  <div class="arejaKaste">
+    <h1 class="teksts"> Pieteikuma anketa HTML nodarbībām </h1>
+        <img class="center" src="Atteli/24.jfif" alt="attēls">
+   <p class="bold"> Ievadi informāciju par sevi:</p>
+   <form> 
+    <label class="iesniegt" for="vards"> vārds:</label>
+    <input class="iesniegt" type="text" name="vards" >
+</form>
+   <br>
+     <label class="iesniegt" for="vecums">vecums:</label>
+	<select class="iesniegt" name="vecums" >
         	<option value="10-12">10-12 gadi</option>
         	<option value="13-16">13-16 gadi</option>
-        	<option value="17-19">17-19 gadi</option>        
-    	</select>
-       <form>
-        <label for="papildus"> apgūšu arī javascript:</label>
-        <input type="checkbox" name="papildus" >
-      </form>
-      <hr>
-      <button type="button">Iesniegt pieteikumu</button>
-    </div>
-  </body>
+        	<option value="17-19">17-19 gadi</option>  	
+        </select> 
+   <form> 
+      <br>
+    <label class="iesniegt" for="papildus"> apgūšu arī javascript:</label> 
+    <input class="iesniegt" type="checkbox" name="papildus">
+   </form>
+   <hr>
+   <button class="button" type="button">Iesniegt pieteikumu</button>
+  </div>
+ </body>
 </html>
